--- a/Desktop/sassworkshp-main/index.html
+++ b/Desktop/sassworkshp-main/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="cards">
-                    <a class='card' href='./retaurant/lapalette.html'>
+                    <a class='card' href='./retaurants/lapalette.html'>
                         <img src="./images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="card__img">
                         <span class="card__badge">Nouveau</span>
                         <footer class="card__footer">
@@ -77,7 +77,7 @@
                             </div>
                         </footer>
                     </a>
-                    <a class='card' href='./retaurant/lanote.html'>
+                    <a class='card' href='./retaurants/lanote.html'>
                         <img src="./images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="card__img">
                         <span class="card__badge">Nouveau</span>
                         <footer class="card__footer">
@@ -91,7 +91,7 @@
                             </div>
                         </footer>
                     </a>
-                    <a class='card' href='./retaurant/alafrancaise.html'>
+                    <a class='card' href='./retaurants/lafrancaise.html'>
                         <img src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card__img">
                         <footer class="card__footer">
                             <div class="card__content">
@@ -104,7 +104,7 @@
                             </div>
                         </footer>
                     </a>
-                    <a class='card' href='/le-delice-des-sens'>
+                    <a class='card' href='/retaurants/ledelice.html'>
                         <img src="./images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
                             class="card__img">
                         <footer class="card__footer">
